--- a/explorer/templates/explorer/mission.html
+++ b/explorer/templates/explorer/mission.html
@@ -1,9 +1,9 @@
 {% extends "explorer/base.html" %}
 
 {% block main-content %}
-  <div class="container">
+  <div class="container-fluid">
   <div class="row mission-{{object.number}}-header">
-    <div class="col-2">
+    <div class="col-2 mission-title">
       <h1 class="side-writing">Mission {{object.number}}</h1>
     </div>
     <div class="col-10  mission-content">
