--- a/explorer/templates/explorer/base.html
+++ b/explorer/templates/explorer/base.html
@@ -10,17 +10,16 @@
 
     <title>Serol and the Cosmic Explorers | powered by Las Cumbres Observatory</title>
 
-    <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <link href="{% static "explorer/css/layout.css" %}" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto" rel="stylesheet">
 
-
+    <link href="{% static "explorer/css/layout.css" %}" rel="stylesheet">
   </head>
 
   <body>
 
+    <div id="wrapper">
     <nav class="navbar navbar-toggleable-md navbar-inverse nav-head">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -29,20 +28,63 @@
 
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item"><a class="nav-link active" href="#">Login</a></li>
+          <li class="nav-item" id="login"><a class="nav-link" href="#" data-toggle="modal" data-target="#login-overlay">Login</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Become a Cosmic Explorer</a></li>
           <li class="nav-item"><a class="nav-link" href="#">About Serol</a></li>
+          <li class="nav-item" id="logout" style="display:none;"><a class="nav-link" href="#">Logout</a></li>
         </ul>
       </div>
     </nav>
 
+<div class="{% block wrapper-class%}{%endblock%}" id="wrapper-inner">
 {% block main-content %}
 {% endblock %}
+</div>
 
 
-    <div class="footer navbar-fixed-bottom">
-        <div>&copy; {% now "Y" %} <a href="https://lco.global">Las Cumbres Observatory</a></div>
+    <div id="login-overlay" class="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+      <div class="modal-content">
+          <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+              <h4 class="modal-title" id="myModalLabel">Login</h4>
+          </div>
+          <div class="modal-body">
+              <div class="row">
+                          <form id="loginForm" method="POST" action="" novalidate="novalidate">
+                            {% csrf_token %}
+                              <div class="form-group">
+                                  <label for="username" class="control-label">Username</label>
+                                  <input type="text" class="form-control" id="username" name="username" value="" required="" title="Please enter you username" placeholder="example@gmail.com">
+                                  <span class="help-block"></span>
+                              </div>
+                              <div class="form-group">
+                                  <label for="password" class="control-label">Password</label>
+                                  <input type="password" class="form-control" id="password" name="password" value="" required="" title="Please enter your password">
+                                  <span class="help-block"></span>
+                              </div>
+                              <div id="alert-error" class="alert alert-error hide">Wrong username or password</div>
+                              <button class="btn btn-success btn-block" id="login-btn">Login</button>
+                              <p><a href="/forgot/" class="btn btn-default btn-block">Help to login</a></p>
+                              <p><a href="#" class="btn btn-info btn-block">Register now!</a></p>
+                          </form>
+              </div>
+          </div>
+      </div>
     </div>
+  </div>
+</div>
+
+
+  <footer class="navbar-fixed-bottom">
+      <div class="container-fluid py-3">
+          <div class="row">
+          <div class="footer-content">
+          &copy; {% now "Y" %} <a href="https://lco.global">Las Cumbres Observatory</a>
+          </div>
+        </div>
+      </div>
+  </footer>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
@@ -50,7 +92,35 @@
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-{% block script-content %}
-{% endblock%}
+    <script src="{% static "explorer/js/auth.js" %}"  type="text/javascript" ></script>
+    {% block script-content %}
+    <script>
+    $(document).ready(function(){
+
+      $( "#login-btn" ).click(function( event ) {
+    		event.preventDefault();
+    		login($('#username').val(), $('#password').val(), function(result){
+    	    if(result){
+    	      $('#loginForm').hide();
+    	      $('#alert-error').hide();
+    	      $('#logout').show();
+            $('#login').hide();
+    				//$( "#login-form" ).submit();
+    	    }else{
+    	      $('#alert-error').show().find('strong').text('Login Failed');
+    	    }
+    	  });
+      });
+
+
+      $('#logout').click(function(){
+        logout();
+        $('#loginForm').show();
+        $('#logout').hide();
+        $('#login').show();
+      });
+    });
+    </script>
+    {% endblock %}
   </body>
 </html>
