--- a/explorer/static/explorer/css/layout.css
+++ b/explorer/static/explorer/css/layout.css
@@ -66,6 +66,10 @@ h1.side-writing {
   text-shadow: 0 .5rem .5rem rgba(0,0,0,.5);
 }
 
+p {
+  font-size:2rem;
+}
+
 
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
@@ -158,6 +162,10 @@ h5.modal-title{
 
  .page-header {
    background-color:rgb(128,0,0);
+ }
+
+ .page-header h1 {
+   margin: 5px 0 15px 0;
  }
 
  .title-left{
