--- a/explorer/templates/explorer/mission.html
+++ b/explorer/templates/explorer/mission.html
@@ -1,4 +1,5 @@
 {% extends "explorer/base.html" %}
+{% load i18n %}
 
  {%block wrapper-class %}mission-{{object.number}}-header{% endblock %}
 
@@ -6,11 +7,11 @@
   <div class="container-fluid">
   <div class="row">
     <div class="col-2 mission-title">
-      <h1 class="side-writing">Mission {{object.number}}</h1>
+      <h1 class="side-writing">{% trans "Mission" %} {{object.number}}</h1>
     </div>
     <div class="col-10  mission-content">
       <h1 class="mission-name">{{object.name|safe}}</h1>
-      <p><a class="btn btn-info btn-lg  animated tada" href="{% url 'challenge' 1 %}" role="button">Start the mission &raquo;</a></p>
+      <p><a class="btn btn-info btn-lg animated tada" href="{% url 'challenge' 1 %}" role="button">{% trans "Start the mission" %} &raquo;</a></p>
     </div>
   </div>
 </div>
