--- a/explorer/templates/explorer/base.html
+++ b/explorer/templates/explorer/base.html
@@ -12,9 +12,12 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto|Aldrich" rel="stylesheet">
 
     <link href="{% static "explorer/css/layout.css" %}" rel="stylesheet">
+
+    <script defer src="{% static "explorer/js/solid.min.js" %}"></script>
+    <script defer src="{% static "explorer/js/fontawesome.min.js" %}"></script>
   </head>
 
   <body>
