Adding new logo, better targets and starting identify

--- a/explorer/templates/explorer/challenge-message.html
+++ b/explorer/templates/explorer/challenge-message.html
@@ -27,7 +27,7 @@
           <i class="fas fa-alarm-clock fa-10x"></i>
         </div>
         <div class="col-md-8">
-        <h2 class="request-status-info"><span id="request-days"></span><span id="request-time"><i class="fa fa-cog fa-spin fa-fw"></i></span></h2>
+        <h2 class="request-status-info"><span id="request-time"><i class="fa fa-cog fa-spin fa-fw"></i></span></h2>
         </div>
       </div>
       <div class="row">
