--- a/explorer/templates/explorer/challenge-observe.html
+++ b/explorer/templates/explorer/challenge-observe.html
@@ -5,7 +5,7 @@
 <script src="{% static 'explorer/js/utils.js' %}" ></script>
 <script>
 var targets;
-var category = '{{object.category}}';
+var category = '{{object.avm_code}}';
 var image_files = {
     '5.1.1' : "{% static 'explorer/images/5.1.1-spiral_galaxy.png' %}",
     '5.1.4' : "{% static 'explorer/images/5.1.4-elliptical_galaxy.png' %}",
