--- a/explorer/static/explorer/css/layout.css
+++ b/explorer/static/explorer/css/layout.css
@@ -149,7 +149,7 @@ h5.modal-title{
    vertical-align: top;
  }
 
- .mission-1-sidebar {
+.mission-1-sidebar {
    background: url('../images/m1-SidePanel.jpg') no-repeat fixed left bottom;
  }
 
@@ -173,9 +173,17 @@ h5.modal-title{
    text-shadow: 0 .5rem .5rem rgba(128,128,255,0.7);
  }
 
- .page-header {
-   background-color:rgb(128,0,0);
+.mission-1-sidebar .page-header {
+   background-color:rgba(29, 220, 93, 0.7);
  }
+
+ .mission-2-sidebar .page-header {
+    background-color:rgba(237, 80, 48, 0.7);
+  }
+
+  .mission-3-sidebar .page-header {
+     background-color:rgba(36, 209, 255, 0.7);
+   }
 
  .page-header h1 {
    margin: 5px 0 15px 0;
@@ -213,6 +221,60 @@ h5.modal-title{
 .target-holder img {
   width:50%;
 }
+
+.side-panel {
+  background-color: rgba(0,0,0, 0.2);
+  border: 3px solid #fff;
+}
+
+.side-panel p {
+  font-size:1rem;
+}
+
+/* Image identify
+*/
+
+.identify-container {
+    position: relative;
+    width: 50%;
+}
+
+.identify-image {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.identify-middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%)
+}
+
+.identify-container:hover .identify-image {
+  opacity: 0.3;
+}
+
+.identify-container:hover .identify-middle {
+  opacity: 1;
+}
+
+.identify-text {
+  background-color: #4CAF50;
+  color: white;
+  font-size: 16px;
+  padding: 16px 32px;
+}
+
+/* Footer
+*/
 
 footer {
   background-color:#000;
