--- a/explorer/templates/explorer/home.html
+++ b/explorer/templates/explorer/home.html
@@ -10,9 +10,9 @@
     <div class="col-4 title-left">
     </div>
     <div class="col-4 ">
-      <img src="{% static 'explorer/images/serol_head_logo.png' %}" alt="serol logo" class="img-fluid" />
-      <h1 class="title-main">{% trans "Mission Serol" %}</h1>
-      <p class="lead">{% trans "The Adventures of Serol, Cosmic Explorer" %}</p>
+      <img src="{% static 'explorer/images/serol_logo_lg.png' %}" alt="serol logo" class="img-fluid" />
+      <h1 class="title-main">{% trans "SEROL" %}</h1>
+      <p class="lead">{% trans "Join Serol and become a Cosmic Explorer" %}</p>
       <p class="lead">
         <a href="#" class="btn btn-lg btn-outline-secondary animated tada" data-toggle="modal" data-target="#exampleModal">{% trans "Start the adventure!" %}</a>
       </p>
