--- a/explorer/templates/explorer/challenge-observe.html
+++ b/explorer/templates/explorer/challenge-observe.html
@@ -76,7 +76,7 @@ $(document).ready(function(){
   <!-- Example row of columns -->
   <div class="row page-header">
     <div class="col-lg-12">
-        <h1>Challenge {{object.number }}</h1>
+        <h1>{% trans "Challenge" %} {{object.number }}</h1>
         <p>{{object.action}}</p>
     </div>
   </div>
